--- a/web/lang/en_AU.lang
+++ b/web/lang/en_AU.lang
@@ -82,7 +82,7 @@ advMode.allPlayers=Use "@a" to target all players
 advMode.command=Console Command
 advMode.nearestPlayer=Use "@p" to target nearest player
 advMode.notAllowed=Must be an opped player in creative mode
-advMode.enabled=Command blocks are not enabled on this server
+advMode.Enabled=Command blocks are not enabled on this server
 advMode.previousOutput=Previous Output
 advMode.randomPlayer=Use "@r" to target random player
 advMode.setCommand=Set Console Command for Block
